<resources>
    <string name="app_name">Gber</string>
    <string name="AUser">Username</string>
    <string name="APass">Password</string>
    <string name="BPass">Confirm Password</string>
    <string name="ALogin">Login</string>
    <string name="ARegis">Register</string>
    <string name="BSub">Submit</string>
    <string name="BCan">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="positon">Position</string>
    <string name="address">Address</string>
    <string name="tel">Tel.</string>
    <string-array name="SizeGas">
        <item>7 KG</item>
        <item>15 KG</item>
        <item>48 KG</item>
    </string-array>

</resources>
